fix layout issue

--- a/app/components/committeemembers.module.css
+++ b/app/components/committeemembers.module.css
@@ -29,7 +29,7 @@
   height: 40vh;
 }
 
-.memberCard2{
+.memberCard2 {
   width: 17vw;
 }
 
@@ -63,6 +63,11 @@
 }
 
 @media screen and (max-width: 615px) {
+  .memberCard2 {
+    width: 40vw;
+    /* max-width: 100px; */
+    /* width: 100%; */
+  }
   .memberCard,
   .mainMemberCard {
     width: 40vw;
