--- a/app/components/heropage.module.css
+++ b/app/components/heropage.module.css
@@ -124,6 +124,7 @@
 
 @media screen and (max-width: 615px) {
   .heroBackground {
+    width: 100%;
     /* height: 90vh; */
   }
 
